# othello

./: .gitignore  CMakeLists.txt
src/: beamSearch.cpp  beamSearch.hpp  field.cpp  field.hpp  main.cpp
